--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
     <style>
-        input {
+        input.code {
             display: block;
             margin: 2em auto;
             border: none;
@@ -19,16 +19,36 @@
             outline: none;
             color: dodgerblue;
         }
+        .ok {
+            background-color: green;
+        }
+        .error {
+            background-color: red;
+        }
 
     </style>
+    <script type="application/javascript">
+        function validateCode() {
+            var val = document.getElementById("code").value
+            var body = document.body;
+            console.log
+            if(val === '12345'){
+                body.classList.remove("error");
+                body.classList.add("ok");
+            } else {
+                body.classList.remove("ok");
+                body.classList.add("error");
+            }
+        }
+    </script>
 </head>
-<body>
+<body id="body">
 <div style="text-align: center">
 <h1>
         Find the code before the bomb blows</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UiS9LMziSt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<input type="text" maxlength="5" size="5"/>
+<input type="text" maxlength="5" size="5" id="code" class="code"/><input type="button" name="Shutdown" value="Shutdown" onclick="validateCode()">
 </div>
 </body>
 </html>
