--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
+          integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
     <style>
         input.code {
             display: block;
@@ -15,13 +16,16 @@
             font: 5ch droid sans mono, consolas, monospace;
             letter-spacing: 0.5ch;
         }
+
         input:focus {
             outline: none;
             color: dodgerblue;
         }
+
         .ok {
             background-color: green;
         }
+
         .error {
             background-color: red;
         }
@@ -32,7 +36,7 @@
             var val = document.getElementById("code").value
             var body = document.body;
             console.log
-            if(val === '12345'){
+            if (val === '12345') {
                 body.classList.remove("error");
                 body.classList.add("ok");
             } else {
@@ -44,11 +48,13 @@
 </head>
 <body id="body">
 <div style="text-align: center">
-<h1>
+    <h1>
         Find the code before the bomb blows</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UiS9LMziSt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UiS9LMziSt8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<input type="text" maxlength="5" size="5" id="code" class="code"/><input type="button" name="Shutdown" value="Shutdown" onclick="validateCode()">
+    <input type="text" maxlength="5" size="5" id="code" class="code"/><input type="button" name="Shutdown"
+                                                                             value="Shutdown" onclick="validateCode()">
 </div>
 </body>
 </html>
